<resources>
    <string name="app_name">Dimchuk and Yau</string>
    <string name="hintUserId">Enter User ID</string>
    <string name="hintSystolic">Enter Systolic Value</string>
    <string name="hintDiastolic">Enter Diastolic Value</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="btnCancel">Cancel</string>

    <string name="emptyList_addPrompt">No entries found. \nStart by adding new entries.</string>
    <string name="emptyList_filterPrompt">No entries found. \nUpdate or clear your search filter.</string>

    <string name="btnAddItem">Add BP Reading</string>
    <string name="conditionNormal">Normal</string>
    <string name="conditionElevated">Elevated</string>
    <string name="conditionStage1">High Blood Pressure (Stage 1)</string>
    <string name="conditionStage2">High Blood Pressure (Stage 2)</string>
    <string name="conditionCrisis">Hypertensive Crisis</string>
    <string name="conditionDefault">N/A</string>
    <string name="crisisWarning">WARNING: Your blood pressure is dangerously high.
        Immediately seek medical attention.</string>
    <string name="hintMonthToDate">Calculate Average by Name</string>
    <string name="btnCalc">Calculate</string>
    <string name="hintSearch">Enter User ID</string>
    <string name="btnSearch">Search</string>
    <string name="btnClearTxt">Clear</string>


</resources>
