<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtUserId"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textSize="26sp"
        android:hint="@string/hintUserId"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_below="@+id/edtUserId"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/txtTime"
        android:layout_below="@+id/txtDate"
        android:layout_margin="2dp"
        android:minHeight="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/etSystolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTime"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/hintSystolic"
        android:inputType="number"
        android:minHeight="80dp"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/etDiastolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSystolic"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/hintDiastolic"
        android:inputType="number"
        android:minHeight="80dp"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_above="@+id/btnCancel"
        android:text="@string/btnSave"
        android:textSize="26sp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:text="@string/btnCancel"
        android:layout_alignParentBottom="true"
        android:textSize="26sp"/>


</RelativeLayout>
